--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "mongoose": "^5.7.9",
-    "uuid": "^3.3.3",
     "swagger-ui-express": "^4.1.2",
-    "sync-request": "^6.1.0"
+    "sync-request": "^6.1.0",
+    "uuid": "^3.3.3"
   }
 }
